@@ -2,8 +2,11 @@ Version 0.4.0 [WIP]
 -------------------------------------------------------------------------
 
 NEW FEATURES
-* Amazon S3 bucket access logs are now supported with read_s3(). Thanks to
-Hadley Wickham for the feature request.
+* Amazon S3 bucket access logs are now supported with read_s3(). Thanks to Hadley Wickham
+for the feature request.
+
+BUG FIXES
+* For consistency purposes, date-times will be POSIXct rather than occasionally POSIXlt
 
 Version 0.3.1
 -------------------------------------------------------------------------
